Pieval favicon casing bug squashed.  Added pieval logo to index - experimental

--- a/app/static/styles/pieval.css
+++ b/app/static/styles/pieval.css
@@ -121,3 +121,8 @@ table.center_table {
   cursor: pointer;
   align: center;
 }
+
+
+h3.inline_header{
+  display: inline;
+}
